fixes after review, create List with List.of